fix: add cache busters to JS files

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2899,9 +2899,9 @@
 
     <script src="/i18n.js"></script>
     <script src="/config.js"></script>
-    <script src="/app.js?v=20260126-2245"></script>
+    <script src="/app.js?v=1769516541"></script>
     <script src="/inline-editor.js"></script>
-    <script src="/admin-ui.js"></script>
+    <script src="/admin-ui.js?v=1769516537"></script>
     <script>
         // Display version from config
         if (CONFIG.VERSION) {
