--- a/dashboard/kontakt.html
+++ b/dashboard/kontakt.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="de" class="theme-gast">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kontakt - Gast auf Erden</title>
+    <!-- SSI Builders Design System -->
+    <link rel="stylesheet" href="/ssi-builders.css">
     <script src="https://unpkg.com/lucide@latest"></script>
     <style>
         * {
