--- a/dashboard/pages/admin-panel.html
+++ b/dashboard/pages/admin-panel.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="de" class="theme-gast">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -14,6 +14,9 @@
 
     <!-- Theme Color -->
     <meta name="theme-color" content="#9CAF88">
+
+    <!-- SSI Builders Design System -->
+    <link rel="stylesheet" href="/ssi-builders.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
