--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -404,6 +404,7 @@
             width: 28px;
             height: 28px;
             stroke-width: 1.5;
+            margin: 0 auto; /* Center block-level SVG */
         }
 
         .info-item .label {
