fix: Use flame icon for gas instead of fuel pump

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2341,7 +2341,7 @@
                                 <span style="font-size: 0.85rem;" data-i18n="costs.laundry">Waschmaschine</span>
                             </div>
                             <div style="display: flex; align-items: center; gap: 8px; padding: 10px 12px; background: rgba(156, 175, 136, 0.1); border-radius: 8px;">
-                                <i data-lucide="fuel" style="width: 16px; height: 16px; color: var(--forest);"></i>
+                                <i data-lucide="flame" style="width: 16px; height: 16px; color: var(--forest);"></i>
                                 <span style="font-size: 0.85rem;" data-i18n="costs.gas">Gas</span>
                             </div>
                             <div style="display: flex; align-items: center; gap: 8px; padding: 10px 12px; background: rgba(156, 175, 136, 0.1); border-radius: 8px;">
