--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2499,43 +2499,43 @@
                     <div class="card-icon"><i data-lucide="wifi"></i></div>
                     <div>
                         <h3 class="card-title" data-i18n="wifi.cardTitle">WLAN-Zugang</h3>
-                        <p class="card-subtitle" data-i18n="wifi.cardSubtitle">Schnell verbinden</p>
+                        <p class="card-subtitle" style="font-size: 0.9rem; color: var(--text-muted);">Passwort: <strong style="color: var(--forest);">Hostel 21</strong></p>
                     </div>
                 </div>
-                <div class="wifi-content">
-                    <!-- WLAN 1: Hostel Power -->
-                    <div style="text-align: center; width: 100%;">
-                        <h4 style="color: var(--forest); margin-bottom: 12px; font-size: 1rem;">Hostel Power</h4>
-                        <div class="wifi-qr">
+                <div class="wifi-content" style="padding: 0;">
+                    <!-- Kompakte WLAN Liste -->
+                    <div style="display: flex; flex-direction: column; gap: 8px;">
+                        <!-- WLAN 1: Hostel Power -->
+                        <div class="wifi-item" onclick="toggleWifiQR('wifi1')" style="display: flex; align-items: center; justify-content: space-between; padding: 12px 16px; background: rgba(156, 175, 136, 0.08); border-radius: 12px; cursor: pointer; transition: background 0.2s;">
+                            <div style="display: flex; align-items: center; gap: 12px;">
+                                <i data-lucide="signal" style="width: 20px; height: 20px; color: var(--forest);"></i>
+                                <span style="font-weight: 500; color: var(--forest);">Hostel Power</span>
+                                <span style="font-size: 0.75rem; padding: 2px 8px; background: var(--forest); color: white; border-radius: 10px;">Empfohlen</span>
+                            </div>
+                            <i data-lucide="chevron-down" id="wifi1-chevron" style="width: 20px; height: 20px; color: var(--text-muted); transition: transform 0.3s;"></i>
+                        </div>
+                        <div id="wifi1-qr" style="display: none; text-align: center; padding: 16px; background: rgba(156, 175, 136, 0.05); border-radius: 12px; margin-top: -4px;">
                             <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=WIFI:S:Hostel%20Power;T:WPA;P:Hostel%2021;;"
                                  alt="WiFi QR Code - Hostel Power"
-                                 style="width: 180px; height: 180px; border-radius: 12px;">
+                                 style="width: 150px; height: 150px; border-radius: 8px; margin: 0 auto;">
+                            <p style="margin-top: 8px; font-size: 0.8rem; color: var(--text-muted);">Mit Kamera scannen</p>
                         </div>
-                        <div class="wifi-details" style="margin-top: 12px;">
-                            <div class="wifi-info-row">
-                                <strong>Passwort:</strong> Hostel 21
-                            </div>
-                        </div>
-                    </div>
 
-                    <!-- WLAN 2: Hostel -->
-                    <div style="text-align: center; width: 100%; border-top: 1px solid var(--sand); padding-top: 24px;">
-                        <h4 style="color: var(--forest); margin-bottom: 12px; font-size: 1rem;">Hostel</h4>
-                        <div class="wifi-qr">
+                        <!-- WLAN 2: Hostel -->
+                        <div class="wifi-item" onclick="toggleWifiQR('wifi2')" style="display: flex; align-items: center; justify-content: space-between; padding: 12px 16px; background: rgba(156, 175, 136, 0.08); border-radius: 12px; cursor: pointer; transition: background 0.2s;">
+                            <div style="display: flex; align-items: center; gap: 12px;">
+                                <i data-lucide="signal" style="width: 20px; height: 20px; color: var(--sage-dark);"></i>
+                                <span style="font-weight: 500; color: var(--sage-dark);">Hostel</span>
+                            </div>
+                            <i data-lucide="chevron-down" id="wifi2-chevron" style="width: 20px; height: 20px; color: var(--text-muted); transition: transform 0.3s;"></i>
+                        </div>
+                        <div id="wifi2-qr" style="display: none; text-align: center; padding: 16px; background: rgba(156, 175, 136, 0.05); border-radius: 12px; margin-top: -4px;">
                             <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=WIFI:S:Hostel;T:WPA;P:Hostel%2021;;"
                                  alt="WiFi QR Code - Hostel"
-                                 style="width: 180px; height: 180px; border-radius: 12px;">
-                        </div>
-                        <div class="wifi-details" style="margin-top: 12px;">
-                            <div class="wifi-info-row">
-                                <strong>Passwort:</strong> Hostel 21
-                            </div>
+                                 style="width: 150px; height: 150px; border-radius: 8px; margin: 0 auto;">
+                            <p style="margin-top: 8px; font-size: 0.8rem; color: var(--text-muted);">Mit Kamera scannen</p>
                         </div>
                     </div>
-
-                    <p id="qrCodeInstruction" style="margin-top: 20px; color: var(--text-muted); font-size: 0.85rem; text-align: center;">
-                        Scannen Sie den QR-Code mit Ihrer Kamera, um sich automatisch zu verbinden.
-                    </p>
                 </div>
             </div>
 
@@ -2993,6 +2993,20 @@
                     top: offsetPosition,
                     behavior: 'smooth'
                 });
+            }
+        }
+
+        // Toggle WiFi QR Code
+        function toggleWifiQR(wifiId) {
+            const qrEl = document.getElementById(wifiId + '-qr');
+            const chevron = document.getElementById(wifiId + '-chevron');
+            
+            if (qrEl.style.display === 'none') {
+                qrEl.style.display = 'block';
+                chevron.style.transform = 'rotate(180deg)';
+            } else {
+                qrEl.style.display = 'none';
+                chevron.style.transform = 'rotate(0deg)';
             }
         }
 
