feat: Add average cost per day to energy stats

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2665,7 +2665,11 @@
                         </div>
                         <div class="stay-info-item">
                             <i data-lucide="bar-chart-3"></i>
-                            <span><span data-i18n="energy.avgPerDay">Durchschnitt pro Tag</span>: <strong id="stayAvgEnergy">--</strong> kWh</span>
+                            <span><span data-i18n="energy.avgPerDay">Ø Verbrauch</span>: <strong id="stayAvgEnergy">--</strong> kWh/Tag</span>
+                        </div>
+                        <div class="stay-info-item">
+                            <i data-lucide="piggy-bank"></i>
+                            <span><span data-i18n="energy.avgCostPerDay">Ø Kosten</span>: <strong id="stayAvgCost">--</strong> €/Tag</span>
                         </div>
                     </div>
 
