feat: Add partial payment info for longer stays

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2793,6 +2793,12 @@
                         <i data-lucide="info" style="width: 14px; height: 14px; display: inline-block; vertical-align: middle; margin-right: 6px;"></i>
                         <span data-i18n="transparency.info">Die genauen Beträge für Kurtaxe und Energiekosten werden separat kommuniziert.</span>
                     </div>
+
+                    <div style="margin-top: 12px; padding: 12px; background: rgba(156, 175, 136, 0.1); border-radius: 8px; font-size: 0.85rem; color: var(--forest); border-left: 3px solid var(--forest);">
+                        <i data-lucide="wallet" style="width: 14px; height: 14px; display: inline-block; vertical-align: middle; margin-right: 6px;"></i>
+                        <strong data-i18n="transparency.partialPaymentTitle">Längerer Aufenthalt?</strong>
+                        <span data-i18n="transparency.partialPaymentText"> Bei längeren Aufenthalten sind Teilzahlungen möglich, um die laufenden Kosten überschaubar zu halten. Sprich uns einfach an!</span>
+                    </div>
                 </div>
             </div>
         </div>
