--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -756,10 +756,11 @@
         .energy-info-content {
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-end;
             gap: 8px;
-            max-width: 600px;
-            margin: 0 auto;
+            max-width: 100%;
+            margin: 0;
+            padding-right: 8px;
             font-size: 0.85rem;
         }
         
